[tool.poetry]
name = "langgraph-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
